css/main.css
@-moz-viewport { width: device-width; scale: 1; }
@-ms-viewport { width: device-width; scale: 1; }
@-o-viewport { width: device-width; scale: 1; }
@-webkit-viewport { width: device-width; scale: 1; }
@viewport { width: device-width; scale: 1; }

html {
  box-sizing: border-box;
  -moz-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  text-size-adjust: 100%;
  height: 100%;
}

*, *::before, *::after {
  box-sizing: inherit;
}

body {
  margin: 0;
}

main {
  margin: 0;
  color: #000033;
  position: relative;
  height: 100%;
  padding-top: 100px;
}

.nav-logo {
  width: 160px;
  margin-bottom: 0;
}

nav {
  position: fixed;
  width: 100%;
  height: 100px;
  padding: 1.5em;
  background-color: #fff;
  z-index: 10000;
}

nav ol {
  padding: 0;
  width: 130%;
  text-align: center;
  margin-top: 0.5em;
  margin-left: -15%;
}

nav li {
  list-style-type: none;
  display: inline-block;
  padding: 0em 1.1em 0em 1.1em;
  font-size: .7em;
  font-family: 'Open Sans', sans-serif;
}

nav a {
  text-decoration: none;
  color: #000033;
}

nav a:hover {
  color: orange;
}

::selection {
  color: #fff;
  background: orange;
}

.banner {
  position: relative;
  width: 100%;
  overflow: hidden;

}

h1 {
  font-family: 'Open Sans', sans-serif;
  font-size: 1.6em;
  margin-bottom: .5em;
  font-weight: 300;
}

.banner-text {
  position: absolute;
  top: 30%;
  transform: translateY(-30%);
  margin-top: 0;
  width: 100%;
  padding-left: 1.5em;
  padding-right: 1.5em;
  color: #fff;
}

.banner-text p {
  font-family: 'Open Sans', sans-serif;
  font-weight: 300;
  font-size: .9em;
  line-height: 1.7;
}

footer {
  bottom: 0;
  width: 100%;
  padding: 1em 1em 0em 1em;
  background-color: #fff;
}

footer img {
  width: 120px;
  display: inline;
  float: left;
}

footer p {
  font-size: 0.6em;
  display: inline;
  position: absolute;
  right: 0;
  bottom: 0;
  font-weight: 300;
  line-height: 1.5;
  font-family: 'Open Sans', sans-serif;

}

footer div {
  position: relative;
  height: 2em;
}

.button:hover {
  border-bottom: 2px solid orange;
}

main {
  width: 100%;

}

.banner-img {
  height: 100vh;
}

.section {
  padding: 1.5em;
  font-family: 'Cormorant Garamond', serif;
}

h2 {
  font-family: 'Open Sans', sans-serif;
  font-weight: 300;
  font-size: 2.2em;
  margin-top: .5em;
  margin-bottom: .5em;

}

.section p {
  line-height: 1.5;
  font-weight: 500;
}

.orange {
  color: orange;
}

dl li {
  list-style-type: none;
}

dl dt {
  font-family: 'Open Sans', sans-serif;
  font-weight: 200;
  font-size: 1.2em;
  margin-bottom: .5em;
}

dl dd {
  font-family: 'Cormorant Garamond', serif;
  margin: 0;
  margin-bottom: 2em;
  font-weight: 300;
  line-height: 1.5;
}

.contact {
  margin-bottom: 5em;
}

.button-img {
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
  width: 70px;
}

.button-container {
  margin-top: 2em;
  position: relative;
}

